@@ -1,4 +1,8 @@
 2008-06-05 - Sean Huber (shuber@einsteinindustries.com)
+  * Renamed test files
+  * find_current_user always returns current_user
+
+2008-06-05 - Sean Huber (shuber@einsteinindustries.com)
   * Renamed login_required to authentication_required
 
 2008-06-05 - Sean Huber (shuber@einsteinindustries.com)
